--- a/style.css
+++ b/style.css
@@ -5,3 +5,18 @@
     border: blue 2cm;
     border-style: double;
 }
+.lista{
+    border: double red 10px;
+    background-color: black;
+    color: aliceblue;
+    font-size: 25px;
+}
+
+#link-seliga{
+    font-size: 25px;
+    color: black;
+}
+#link-seliga{
+    font-size: 30px;
+    color: goldenrod;
+}
